--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ ktor {
     }
 
     application {
-        modules = [ com.example.adapters.primary.AppConfig.module ]
+        modules = [ com.example.AppConfig.module ]
     }
 
 }
